match-path-method/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match-path-method-svc-v1
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: match-path-method-v1
---
apiVersion: v1
kind: Service
metadata:
  name: match-path-method-svc-v2
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: match-path-method-v2
