match-path-method/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: match-path-method-http
  namespace: default
spec:
  parentRefs:
  - name: tls-gateway
    namespace: cilium-gateway
    sectionName: http
  hostnames:
  - "match-path-method.hkchen.tech"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: match-path-method-https
  namespace: default
spec:
  parentRefs:
  - name: tls-gateway
    namespace: cilium-gateway
  hostnames:
  - "match-path-method.hkchen.tech"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: match-path-method-svc-v1
      port: 80
      weight: 90
    - name: match-path-method-svc-v2
      port: 80
      weight: 10
  - matches:
    - path:
        type: PathPrefix
        value: /api
      method: POST
    backendRefs:
    - name: match-path-method-svc-v1
      port: 80
      weight: 90
    - name: match-path-method-svc-v2
      port: 80
      weight: 10
